--- a/BASICO2/index.html
+++ b/BASICO2/index.html
@@ -71,7 +71,7 @@
                     <h3><font color="gray">SIGA-NOS NO INSTAGRAM E FACEBOOK</font></h3>
                     <p>
                         <h2>
-                            @mesquita_jp
+                            @mesquita_jp_
                         </h2>
                     </p>
                 </div>
