--- a/BASICO2/index.html
+++ b/BASICO2/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div id="final">
                 <div>
-                    <h3><font color="gray">CONOSCO</font></h3>
+                    <h3><font color="gray">FALE CONOSCO</font></h3>
                     <p>
                         <h2>
                             (12) 3456-7890<br>
